[package]
name = "ractor"
version = "0.15.2"
authors = ["Sean Lawlor", "Evan Au", "Dillon George"]
description = "A actor framework for Rust"
documentation = "https://docs.rs/ractor"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["asynchronous"]
rust-version = "1.64"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tokio_unstable)',
    'cfg(rust_analyzer)',
] }

[features]
### Other features
cluster = []
monitors = []
message_span_propogation = []
tokio_runtime = ["tokio/time", "tokio/rt", "tokio/macros", "tokio/tracing"]
blanket_serde = ["serde", "pot", "cluster"]
async-trait = ["dep:async-trait"]

default = ["tokio_runtime", "message_span_propogation"]

[dependencies]
## Required dependencies
bon = "2.2"
dashmap = "6"
futures = "0.3"
once_cell = "1"
strum = { version = "0.26", features = ["derive"] }

## Configurable dependencies
# Tracing feature requires --cfg=tokio_unstable
async-std = { version = "1", features = ["attributes"], optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.30", features = ["sync"] }
tracing = { version = "0.1", features = ["attributes"] }

## Blanket Serde
serde = { version = "1", optional = true }
pot = { version = "3.0", optional = true }


[target.'cfg(all(target_arch = "wasm32",target_os = "unknown"))'.dependencies]
tokio_with_wasm = { version = "0.8.2", features = [
    "macros",
    "sync",
    "rt",
    "time",
] }
web-time = "1.1.0"

[dev-dependencies]
backtrace = "0.3"

function_name = "0.3"
paste = "1"
serial_test = "3.0.0"
rand = "0.8"
tracing-glog = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "1.30", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "tracing",
] }
criterion = "0.5"
tracing-test = "0.2"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
tokio = { version = "1.30", features = ["rt", "time", "sync", "macros"] }
wasm-bindgen-test = "0.3.50"
getrandom = { version = "*", features = ["js"] }
criterion = { version = "0.5", default-features = false }
console_error_panic_hook = "0.1.7"

[[bench]]
name = "actor"
harness = false
required-features = []

[[bench]]
name = "async_traits"
harness = false
required-features = []
