[package]
name = "ractor_cluster"
version = "0.15.7"
authors = ["Sean Lawlor <slawlor>"]
description = "Distributed cluster environment of Ractor actors"
documentation = "https://docs.rs/ractor"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor", "cluster"]
repository = "https://github.com/slawlor/ractor"
readme = "README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["asynchronous"]
build = "src/build.rs"
rust-version = "1.64"

[features]
monitors = ["ractor/monitors"]
message_span_propogation = ["ractor/message_span_propogation"]
async-trait = ["dep:async-trait", "ractor/async-trait"]

default = []

[build-dependencies]
protoc-bin-vendored = "3"
prost-build = { version = "0.13" }

[dependencies]
## Required dependencies
bytes = { version = "1" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
ractor = { version = "0.15.0", default-features = false, features = ["tokio_runtime", "message_span_propogation", "cluster"], path = "../ractor" }
ractor_cluster_derive = { version = "0.15.0", path = "../ractor_cluster_derive" }
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1.30", features = ["rt", "time", "sync", "macros", "net", "io-util", "tracing"]}
tokio-rustls = { version = "0.26" }
tracing = "0.1"
## Optional dependencies
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.30", features = ["rt", "time", "sync", "macros", "net", "io-util", "rt-multi-thread"] }
