[package]
name = "ractor_cluster_derive"
version = "0.8.4"
authors = ["Sean Lawlor <seanlawlor@fb.com>"]
description = "Derives for ractor_cluster"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"

[lib]
name = "ractor_cluster_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
