[package]
name = "ractor_cluster_derive"
version = "0.12.0"
authors = ["Sean Lawlor <seanlawlor@fb.com>"]
description = "Derives for ractor_cluster"
license = "MIT"
edition = "2021"
categories = []
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
rust-version = "1.64"

[lib]
name = "ractor_cluster_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
