[package]
name = "ractor_playground"
version = "0.0.0"
authors = ["Sean Lawlor <seanlawlor@fb.com>"]
description = "A actor framework for Rust - REPL"
license = "MIT"
edition = "2018"
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
publish = false

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
ractor = { path="../ractor", features = ["cluster"] }
ractor_cluster = { path = "../ractor_cluster" }
# ractor_cluster_derive = { path = "../ractor_cluster_derive" }
# rustyrepl = "0.1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread", "signal"] }
